fix: official-website banner title nowrap

--- a/official-website/src/components/Banner.module.css
+++ b/official-website/src/components/Banner.module.css
@@ -13,6 +13,7 @@
 	top: 20%;
 	width: 100%;
 	text-align: center;
+	white-space: nowrap;
 }
 
 .banner .banner__title {
